memo/memo-with-references/tests/3-expected-reference-type.stderr
error: expected reference type with an explicit lifetime
 --> tests/3-expected-reference-type.rs:4:18
  |
4 | fn memome(cache: String) {}
  |                  ^^^^^^
