memo/memo-with-references/tests/3-expected-reference-type.rs
use memo_with_references::memo;

#[memo(cache)]
fn memome(cache: String) {}

fn main() {}
